tests/miniJava/pos/000611_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { java [ this ] = new int [ 0 ] ; } }
