tests/miniJava/neg/005199_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java new ( ) { return 0 ; } }
